--- a/markup/components/button/button.styl
+++ b/markup/components/button/button.styl
@@ -34,6 +34,12 @@
         &_main
             background-color:  mainColor
 
+            &:hover, &.active
+                background-color: darkGreyColor
+
+            &::before
+                background-color: darkGreyColor
+
         &_darkGrey
             background-color darkGreyColor
 
