--- a/markup/components/model-info-popup/model-info-popup.styl
+++ b/markup/components/model-info-popup/model-info-popup.styl
@@ -83,3 +83,4 @@ modelInfoPopupMediumXPadding = 18px
         text-transform: uppercase
         text-decoration: none
         color: darkGreyColor
+        iziAnimation()
