--- a/markup/components/agency-card/agency-card.pug
+++ b/markup/components/agency-card/agency-card.pug
@@ -40,7 +40,7 @@ mixin agency-card-new(avatar, bg)
 
         +avatar(avatar||'navbar.png')._size_medium
 
-        +e.row._top
+        +e.A(href='agency.html').row._top
             - var nextBg = bg ? '%=static=%img/content/agency-card/'+bg : '%=static=%img/content/agency-card/bg.jpg';
 
             +e.IMG(src=nextBg alt='Agency').picture
