--- a/markup/components/agency-card/agency-card.styl
+++ b/markup/components/agency-card/agency-card.styl
@@ -199,6 +199,7 @@
         padding: 30px 0
         display: flex
         width: 100%
+        text-decoration: none
 
         &:not(:last-of-type)
             border-bottom: 1px solid borderColor
