--- a/markup/components/boost/boost.pug
+++ b/markup/components/boost/boost.pug
@@ -4,7 +4,7 @@ mixin boost(masonry)
     - var masonryModifier = !!masonry ? '_masonry' : '';
 
     +b.A.boost(href='boost-account.html' class=masonryModifier)&attributes(attributes)
-        +e.content
+        +e.DIV.content
             +e.icon
                 != pugHelpers.Icon.call(locals, {iconName: 'arrow-boost', iconWidth: '16', iconHeight: '30'})
             +e.P.heading Boost Me Up
