--- a/markup/components/boost/boost.styl
+++ b/markup/components/boost/boost.styl
@@ -5,6 +5,8 @@
     iziAnimation()
     cursor: pointer
     text-wrap: normal
+    text-decoration: none
+    color: darkGreyColor
 
     &.active, &:hover
         & ^[0]__button
