--- a/markup/components/selectbox/selectbox.styl
+++ b/markup/components/selectbox/selectbox.styl
@@ -165,6 +165,10 @@
             font-weight 400
             margin-right: 6px
 
+            .field &
+                text-transform lowercase
+                font-weight: 700
+
         & ^[0]__arrow
             position: static
             margin-bottom: 4px
