--- a/markup/components/footer/footer.styl
+++ b/markup/components/footer/footer.styl
@@ -4,6 +4,9 @@
     background-color: darkGreyColor
     min-height: 345px
 
+    .logo:hover
+        opacity: .75
+
     +below(768px)
         padding: 0
         min-height: initial
@@ -68,6 +71,9 @@
     &__social-items
         margin-top: 21px
 
+        a:hover
+            opacity: .75
+
         a:not(:last-child)
             margin-right: 29px
 
@@ -77,9 +83,16 @@
         height: 100%
         text-decoration: none
         color mainColor
+        transition(color)
+
+        &:hover
+            color: #fff
 
         &_white
             color: #fff
+
+            &:hover
+                color: mainColor
 
         span
             color: inherit
