--- a/markup/components/vertical-nav/vertical-nav.styl
+++ b/markup/components/vertical-nav/vertical-nav.styl
@@ -11,3 +11,7 @@
         line-height 30px
         text-transform uppercase
         text-decoration: none
+        transition(color)
+
+        &:hover
+            color: mainColor
