--- a/markup/components/agency-info/agency-info.pug
+++ b/markup/components/agency-info/agency-info.pug
@@ -7,7 +7,7 @@ mixin agency-info()
         +e.header
             +e.H2.heading
                 span Agency
-                b Premium Escape
+                a(href='agency.html') Premium Escape
             +breadcrumbs('USA', 'los angeles', 'agency', 'Massage')
 
         +grid
