--- a/markup/components/short-info/short-info.styl
+++ b/markup/components/short-info/short-info.styl
@@ -23,6 +23,7 @@
         font-size: 16px
         color: darkGreyColor
         text-decoration: none
+        transition(color)
 
         &_md
             font-size: 16px
