--- a/markup/components/agency-info/agency-info.styl
+++ b/markup/components/agency-info/agency-info.styl
@@ -42,9 +42,15 @@
         span
             color darkGreyColor
 
-        b
+        a
             color mainColor
             margin-left: 6px
+            text-decoration: none
+            font-weight: 700
+            transition(color)
+
+            &:hover
+                color: darkGreyColor
 
     &__row
         display: flex
