--- a/markup/components/selectbox/selectbox.styl
+++ b/markup/components/selectbox/selectbox.styl
@@ -77,6 +77,7 @@
 
     &__list
         width: 258px
+        max-height 240px
         overflow-y: auto
         flex-shrink: 0
         box-shadow 0 10px 40px rgba(29, 29, 29, .1)
