--- a/markup/components/user-nav/user-nav.styl
+++ b/markup/components/user-nav/user-nav.styl
@@ -35,7 +35,7 @@
         &:not(:first-child)
             border-left: 1px solid borderColor
 
-        &.active
+        &.active, &:hover
             box-shadow 0 10px 40px rgba(29, 29, 29, .07)
             background-color #fff
 
