--- a/markup/components/model-preview/model-preview.styl
+++ b/markup/components/model-preview/model-preview.styl
@@ -2,7 +2,12 @@
     display: block
     max-width: 258px
     box-shdow: 0 0 0 0 rgba(0, 0, 0, 0)
-    transition(box-shadow)
+    transition(all)
+
+    &.preload
+        opacity 0
+        pointer-events none
+        transform: translateY(100px)
 
     .badges
         pointer-events none
