--- a/markup/components/dotted-dropdown/dotted-dropdown.styl
+++ b/markup/components/dotted-dropdown/dotted-dropdown.styl
@@ -26,13 +26,7 @@
         border: 1px solid borderColor
         transition(border-color, background-color)
         cursor: pointer
-
-        &:hover
-            background-color: mainColor
-            border-color: transparent
-
-            & ^[0]__icon_dots
-                fill: #fff
+        iziAnimation()
 
     &__icon
         position: absolute
