--- a/markup/components/info-control/info-control.styl
+++ b/markup/components/info-control/info-control.styl
@@ -26,6 +26,14 @@
         background-color: #fff
         border: 1px solid borderColor
         transition(all)
+        iziAnimation(darkGreyColor)
+
+        &:hover
+            & ^[0]__label
+                color: #fff
+
+            & ^[0]__ok
+                fill mainColor
 
     &__label
         color darkGreyColor
