--- a/markup/components/user-fill-profile/user-fill-profile.pug
+++ b/markup/components/user-fill-profile/user-fill-profile.pug
@@ -540,7 +540,7 @@ mixin user-fill-profile-5
                                 option(value='175') 175 $
                                 option(value='200') 200 $
 
-                +col(4)
+                +col(4).grid__col_align_center
                     span.user-fill-profile__label 1 hour
                 +col(4)
                     +selectbox
@@ -575,7 +575,7 @@ mixin user-fill-profile-5
                             option(value='175' selected) 175 $
                             option(value='200') 200 $
 
-                +col(4)
+                +col(4).grid__col_align_center
                     span.user-fill-profile__label 2 hour
                 +col(4)
                     +selectbox
@@ -611,7 +611,7 @@ mixin user-fill-profile-5
                             option(value='200') 200 $
                             option(value='225' selected) 225 $
 
-                +col(4)
+                +col(4).grid__col_align_center
                     span.user-fill-profile__label Night
                 +col(4)
                     +selectbox
@@ -706,17 +706,17 @@ mixin user-fill-profile-7
                 +col(4).grid__col_align_center.grid__col_space_between
                     +checkbox(true, 'sex', 0) Classical Sex
                     +add-input('classical-sex-value', '100 $')
-                +col(4)
+                +col(4).grid__col_align_center
                     +checkbox(false, 'sex', 1) Sex
-                +col(4)
+                +col(4).grid__col_align_center
                     +checkbox(false, 'sex', 2) Deep throating
 
                 +col(4).grid__col_align_center.grid__col_space_between
                     +checkbox(true, 'sex', 3) Anal sex
                     +add-input('sex-value', '2500 $')
-                +col(4)
+                +col(4).grid__col_align_center
                     +checkbox(false, 'sex', 4) BJ with condom
-                +col(4)
+                +col(4).grid__col_align_center
                     +checkbox(false, 'sex', 5) BJ in your car
 
                 +col(4)
@@ -729,9 +729,9 @@ mixin user-fill-profile-7
                 +col(4).grid__col_align_center.grid__col_space_between
                     +checkbox(true, 'sex', 9) Couples
                     +add-input('classical-sex-value', '0 $')
-                +col(4)
+                +col(4).grid__col_align_center
                     +checkbox(false, 'sex', 10) BJ without condom
-                +col(4)
+                +col(4).grid__col_align_center
                     +checkbox(false, 'sex', 11) Cum on breast
 
                 +col(4)
