--- a/markup/components/model-map/model-map.styl
+++ b/markup/components/model-map/model-map.styl
@@ -1,4 +1,7 @@
 .model-map
-    display: block
+    display: none
     width: 100%
     height: 100%
+
+    .map__block > div
+        background-color: darkGreyColor !important
