fix some hover and transition

--- a/markup/components/navbar/navbar.styl
+++ b/markup/components/navbar/navbar.styl
@@ -224,6 +224,7 @@
         text-transform uppercase
         line-height: 1.1875
         font-size: 16px
+        transition(all)
 
     &__description
         margin-top: 2px
