--- a/markup/components/city-suggest/city-suggest.styl
+++ b/markup/components/city-suggest/city-suggest.styl
@@ -27,10 +27,11 @@
 
     &__buttons
         display flex
-        justify-content space-around
+        justify-content space-between
 
     &__button
-        transition(opacity)
+        transition(all)
+        width 50%
 
         &:hover
-            opacity .5
+            opacity 1
