--- a/markup/components/icon-button/icon-button.styl
+++ b/markup/components/icon-button/icon-button.styl
@@ -40,6 +40,7 @@
     &__icon
         display: inline-block
         vertical-align middle
+        transition(all)
 
         &_fill
             fill: darkGreyColor
