--- a/markup/components/photo-tape/photo-tape.styl
+++ b/markup/components/photo-tape/photo-tape.styl
@@ -37,6 +37,7 @@ photoTapeItemWidthMobile = 60px
             & ^[0]__badge
                 width: 100%
                 height: 100%
+                border-radius 0
 
     &__photo
         width: 100%
@@ -56,7 +57,7 @@ photoTapeItemWidthMobile = 60px
         height: 24px
         background-color: mainColor
         will-change: width, height;
-        transition(width, height)
+        transition(width, height, border-radius)
 
         +below(768px)
             top: photoTapeItemWidthMobile
