--- a/markup/components/boost/boost.styl
+++ b/markup/components/boost/boost.styl
@@ -37,7 +37,7 @@
         background-color mainColor
         text-align center
         border-radius 50%
-        transition: background-color .25s cubic-bezier(0.7,0,0.9,1)
+        transition(all)
 
         svg
             height 100%
