--- a/markup/components/close/close.styl
+++ b/markup/components/close/close.styl
@@ -6,6 +6,7 @@
     width: 36px
     height: 36px
     background-color: #2b2c2d
+    cursor pointer
 
     &_top_right
         position: absolute
@@ -18,3 +19,6 @@
 
     &__icon
         fill: #fff
+
+    &:hover
+        opacity .8
