--- a/markup/components/footer/footer.styl
+++ b/markup/components/footer/footer.styl
@@ -15,6 +15,7 @@
         +below(768px)
             & ^[0]__column
                 width: 100%
+                padding-top 0
 
             & ^[0]__col_half-mob
                 +below(768px)
