--- a/markup/components/range-slider/range-slider.styl
+++ b/markup/components/range-slider/range-slider.styl
@@ -94,13 +94,14 @@
             background-color: transparent;
 
         .ui-slider-handle
-            top: -7px
+            top: -6px
             margin-left: -7px
             width 14px
             height 14px
             border 2px solid mainColor
             border-radius: 50%
             background-color #fff
+            cursor pointer
 
             +below(1024px)
                 display: flex
