--- a/markup/components/search-bar/search-bar.styl
+++ b/markup/components/search-bar/search-bar.styl
@@ -60,7 +60,7 @@
         transition(all)
 
         &:hover
-            fill: rgba(darkGreyColor, .6)
+            opacity .6
 
     &__close
         display: table-cell
