--- a/markup/components/vip/vip.styl
+++ b/markup/components/vip/vip.styl
@@ -45,7 +45,7 @@
         text-transform uppercase
         border-radius: 50%
         margin-top: 20px
-        transition: background-color .25s cubic-bezier(0.7,0,0.9,1)
+        transition(all)
 
     &__heading
         color #fff
