--- a/markup/static/stylus/mixins.styl
+++ b/markup/static/stylus/mixins.styl
@@ -137,6 +137,9 @@ iziAnimation(bg = mainColor, color = #fff)
         &::before
             transform: scale3d(9, 9, 1)
 
+    &.active:hover
+        opacity .8
+
     &::before
         content: ''
         position: absolute
