--- a/markup/components/checkbox/checkbox.styl
+++ b/markup/components/checkbox/checkbox.styl
@@ -19,6 +19,7 @@
         display: flex
         align-items: center
         justify-content: center
+        min-width 24px
         width 24px
         height 24px
         border 1px solid borderColor
