--- a/markup/components/map/map.styl
+++ b/markup/components/map/map.styl
@@ -75,14 +75,20 @@
             right: 12px
 
         svg
-            display: none
+            opacity 0
+            pointer-events none
             fill: rgba(#fff, .4)
             margin-left: auto
             cursor: pointer
+            transition(all)
 
         &.active
             svg
-                display: block
+                opacity 1
+                pointer-events all
+
+                &:hover
+                    fill rgba(#fff, .8)
 
     .scroll-wrapper
         padding-top: 0px !important
@@ -149,7 +155,15 @@
             margin-bottom: 6px
 
     &__zoom-out, &__zoom-in
+        transition(all)
         fill: #fff
 
+        ^[0]__button:hover &
+            opacity .6
+
     &__location
+        transition(all)
         fill: mainColor
+
+        ^[0]__button:hover &
+            opacity .6
