--- a/markup/components/selectbox/selectbox.styl
+++ b/markup/components/selectbox/selectbox.styl
@@ -70,6 +70,9 @@
         position: absolute
         bottom: 7px
         right: 7px
+        min-width 8px
+        width 8px
+        height 8px
         fill: mainColor
 
     &__control
