--- a/markup/components/boost/boost.pug
+++ b/markup/components/boost/boost.pug
@@ -9,5 +9,5 @@ mixin boost(masonry)
                 != pugHelpers.Icon.call(locals, {iconName: 'arrow-boost', iconWidth: '16', iconHeight: '30'})
             +e.P.heading Boost Me Up
             +e.P.description You are currently on the site in 2546. You only have 2 visitor. Аttract new visitors.
-        +button().DIV._uppercase.__button
+        +button('div', 'noizi')._uppercase.__button
             <b>boost</b>
