--- a/markup/components/button/button.styl
+++ b/markup/components/button/button.styl
@@ -10,7 +10,8 @@
     cursor pointer
     letter-spacing 1px
     color: darkGreyColor
-    iziAnimation()
+    transition(all)
+    /*iziAnimation()*/
 
     &_inline
         display: inline-block
@@ -64,3 +65,7 @@
 
         &_light-white
             border-color rgba(#fff, .2)
+
+    &_izi
+        iziAnimation()
+
