--- a/markup/components/model-preview/model-preview.styl
+++ b/markup/components/model-preview/model-preview.styl
@@ -69,6 +69,7 @@
         z-index: 18
         opacity: 0
         transition(opacity)
+        text-decoration none
         pointer-events none
 
         b
@@ -88,6 +89,7 @@
 
         .cutoff:hover &
             opacity 1
+            pointer-events all
 
     &__content
         overflow: hidden
