--- a/markup/components/vip/vip.pug
+++ b/markup/components/vip/vip.pug
@@ -9,4 +9,5 @@ mixin vip(masonry)
             +e.SPAN.heading Your VIP profile
             +e.P.text Only
             +e.P.text 80 $ / month
-        +button().DIV._uppercase._bg_darkGrey._color_main.__button <b>Become a VIP</b>
+        +button('div', 'noizi')._uppercase._bg_darkGrey._color_main.__button
+            <b>Become a VIP</b>
