--- a/markup/components/auth-popup/auth-popup.styl
+++ b/markup/components/auth-popup/auth-popup.styl
@@ -20,7 +20,7 @@
         background-color: darkGreyColor
 
         &_action
-            position: static
+            position: relative
             width: 50%
             height: 100%
             overflow: initial
@@ -28,23 +28,58 @@
             +below(768px)
                 width: 100%
                 height: initial
+                min-height 50%
                 flex: 1
+                transition min-height .4s ease-in-out
 
-            & ^[0]__col
+            /*& ^[0]__col
                 display: none
 
                 &:first-child
-                    display: block
+                    display: block*/
+
+            & ^[0]__col
+                display: block
+                opacity 1
+                pointer-events all
+                transition all .4s ease-in-out
+
+                &:not(:first-child)
+                    position absolute
+                    top 0
+                    left 0
+                    width 100%
+                    height 100%
+                    opacity 0
+                    pointer-events none
+
+                    .auth-popup__content
+                        opacity 0
+                        transition all .25s ease-in-out
+                        transition-delay .4s
 
             &.active
                 +below(768px)
-                    height: 62.2%
+                    min-height: 75%
+                    height 75%
 
-                & ^[0]__col
+                /*& ^[0]__col
                     display: block
 
                     &:first-child
-                        display: none
+                        display: none*/
+
+                & ^[0]__col
+                    opacity 1
+                    pointer-events all
+
+                    .auth-popup__content
+                        opacity 1
+
+                    &:first-child
+                        opacity 0
+                        pointer-events none
+
     &__image
         fill-img()
 
@@ -104,6 +139,10 @@
         font-weight 400
         line-height: 1.25
         text-decoration: none
+        transition(all)
+
+        &:hover
+            color rgba(#fff, 1)
 
         +below(768px)
             margin-top: 29px
