--- a/markup/components/model-common-info/model-common-info.styl
+++ b/markup/components/model-common-info/model-common-info.styl
@@ -9,6 +9,7 @@
         display: flex
         flex-direction: column
         justify-content: center
+        overflow hidden
 
         &_left
             padding: 0 29px
@@ -22,6 +23,7 @@
     &__name
         font-size: 20px
         text-transform: uppercase
+        ellipsis(100%)
 
     &__age
         font-size: 16px
@@ -33,6 +35,7 @@
         font-size 21px
         font-weight: 500
         letter-spacing initial
+        ellipsis(65px)
 
     &__label
         margin-top: 5px
