--- a/markup/components/vip/vip.styl
+++ b/markup/components/vip/vip.styl
@@ -55,6 +55,8 @@
         text-decoration: none
         margin-top: 28px
         margin-bottom: 5px
+        text-align center
+        width: 100%
 
     &__text
         display: block
@@ -63,6 +65,8 @@
         font-size 18px
         font-weight 400
         line-height 21/18
+        text-align center
+        width: 100%
 
     &__button
         margin-top: auto
