--- a/markup/components/navbar/navbar.styl
+++ b/markup/components/navbar/navbar.styl
@@ -86,6 +86,9 @@
             .selectbox__box
                 padding: 0 12px
 
+        .button
+            height 100%
+
         &_logo
             +below(1320px)
                 min-width: 88px
