--- a/markup/static/stylus/mixins.styl
+++ b/markup/static/stylus/mixins.styl
@@ -128,7 +128,7 @@ iziAnimation(bg = mainColor, color = #fff)
 
     &:hover, &.active
         color: color
-        border-color bg
+        border-color transparent
         background-color: bg
 
         svg
