--- a/markup/components/filter/filter.styl
+++ b/markup/components/filter/filter.styl
@@ -101,6 +101,9 @@
     &__col
         min-width: 235px
 
+        +below(1140px)
+            min-width 200px
+
         &_no_width
             min-width: initial
 
