--- a/markup/components/header/header.styl
+++ b/markup/components/header/header.styl
@@ -160,6 +160,7 @@
 
                 &__item_profile
                     min-width: initial
+                    width initial
 
                     .navbar__link
                         padding-right: 30px
