--- a/markup/components/model-list/model-list.styl
+++ b/markup/components/model-list/model-list.styl
@@ -9,7 +9,7 @@
 
     .filter
         +below(1300px)
-            margin-top: 45px
+            //margin-top: 45px
 
     +below(768px)
         .grid__col_three
