--- a/markup/components/map/map.styl
+++ b/markup/components/map/map.styl
@@ -90,6 +90,12 @@
                 &:hover
                     fill rgba(#fff, .8)
 
+        .model-map &
+            top 90px
+
+            +below(540px)
+                top 72px
+
     .scroll-wrapper
         padding-top: 0px !important
         padding-bottom: 24px
