--- a/markup/components/navbar/navbar.styl
+++ b/markup/components/navbar/navbar.styl
@@ -62,6 +62,29 @@
         box-shadow 0 10px 40px rgba(29, 29, 29, 0)
         transition(border-color, box-shadow)
 
+        &_profile
+            width 149px
+
+            +below(1320px)
+                width: 135px
+
+            +below(1024px)
+                width initial
+
+            .navbar__link
+                padding-right 20px
+
+                +below(1320px)
+                    padding-right 12px
+
+            .navbar__col:last-of-type
+                width calc(100% - 52px)
+                overflow hidden
+
+            .navbar__heading
+                width 100%
+                ellipsis(100%)
+
         &_filter
             .header__filter-close
                 display: none
