--- a/markup/components/dotted-dropdown/dotted-dropdown.styl
+++ b/markup/components/dotted-dropdown/dotted-dropdown.styl
@@ -34,8 +34,7 @@
         left: 50%
         transform: translate(-50%, -50%)
         fill: mainColor
-
-        transition(opacity)
+        transition(opacity, fill)
 
         &_dots
             fill: darkGreyColor
