--- a/markup/components/filter/filter.styl
+++ b/markup/components/filter/filter.styl
@@ -116,6 +116,16 @@
     &__button
         width: 60px
         height: 60px
+        position: relative
+        
+        .icon-button__icon
+            position: absolute
+            left: 0
+            top: 0
+            bottom: 0
+            right: 0
+            margin: auto
+
 
     &__container
         display: flex
