--- a/markup/components/model-info-popup/model-info-popup.styl
+++ b/markup/components/model-info-popup/model-info-popup.styl
@@ -57,10 +57,12 @@ modelInfoPopupMediumXPadding = 18px
         border-bottom: 1px solid borderColor
         border-left: 0
         border-right: 0
+        border-top: 0
 
     &__rating
         padding: 23px modelInfoPopupBigXPadding 22px;
         border-bottom: 1px solid borderColor
+        cursor: auto !important
 
     &__info
         display: flex
