--- a/markup/components/model-preview/model-preview.styl
+++ b/markup/components/model-preview/model-preview.styl
@@ -89,7 +89,7 @@
 
         .cutoff:hover &
             opacity 1
-            pointer-events all
+            pointer-events none
 
     &__content
         overflow: hidden
@@ -207,6 +207,7 @@
             height 6px
             background-color rgba(#fff, .7)
             margin: 0
+            opacity: 1
             transition(background-color, opacity)
             margin-left: 12px
 
