--- a/markup/components/tags/tags.styl
+++ b/markup/components/tags/tags.styl
@@ -20,3 +20,6 @@
         text-decoration: none
         color: darkGreyColor
         letter-spacing: initial
+
+        &:hover
+            opacity: .7
