--- a/markup/static/stylus/common.styl
+++ b/markup/static/stylus/common.styl
@@ -127,7 +127,7 @@ span {
 ########## */
 
 a, input, button, select, textarea {
-    transition: opacity .25s ease-in-out;
+    transition: all .25s ease-in-out;
 }
 
 select, input, textarea, button {
